Добавлено дерево игры

--- a/2.ipynb
+++ b/2.ipynb
@@ -65,6 +65,61 @@
     "б) Какое максимальное количество ходов может понадобиться этому игроку для выигрыша в правильной игре?\n",
     "Максимальное количество ходов, которое может понадобиться второму игроку для выигрыша, составляет 6 ходов. Это связано с тем, что каждый ход приближает фишку к конечной точке, и при оптимальной игре второй игрок сможет достичь победы за это количество ходов."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Дерево игры**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self, x, y, z):\n",
+    "        self.position = (x, y, z)\n",
+    "        self.children = []\n",
+    "\n",
+    "    def add_child(self, child_node):\n",
+    "        self.children.append(child_node)\n",
+    "\n",
+    "def distance_from_origin(x, y, z):\n",
+    "    return math.sqrt(x**2 + y**2 + z**2)\n",
+    "\n",
+    "def create_game_tree(node):\n",
+    "    if distance_from_origin(*node.position) >= 7 * math.sqrt(3):\n",
+    "        return\n",
+    "    \n",
+    "    # Возможные ходы\n",
+    "    moves = [\n",
+    "        (node.position[0], node.position[1] + 2, node.position[2] + 2),\n",
+    "        (node.position[0] + 1, node.position[1] + 1, node.position[2] + 1),\n",
+    "        (node.position[0] + 3, node.position[1] + 2, node.position[2])\n",
+    "    ]\n",
+    "    \n",
+    "    for move in moves:\n",
+    "        child_node = Node(*move)\n",
+    "        node.add_child(child_node)\n",
+    "        create_game_tree(child_node)\n",
+    "\n",
+    "def print_tree(node, level=0):\n",
+    "    print(\"  \" * level + f\"Position: {node.position}\")\n",
+    "    for child in node.children:\n",
+    "        print_tree(child, level + 1)\n",
+    "\n",
+    "# Начальное состояние\n",
+    "root = Node(0, 0, 0)\n",
+    "create_game_tree(root)\n",
+    "\n",
+    "# Печать дерева игры\n",
+    "print_tree(root)\n"
+   ]
   }
  ],
  "metadata": {
